# overhead-camera-people-counter

./: .gitignore  CMakeLists.txt  README.md
data/: bus.avi
scripts/: prebuild-linux.sh  prebuild-macos.sh  prebuild-windows.cmd
src/: help.cpp  main.cpp
src/model/: Line.cpp  Person.cpp
src/modules/: counter.hpp  model.hpp  util.hpp  view.hpp
src/modules/counter/: VideoCapturePeopleCounter.cpp  VideoCapturePeopleCounterDelegate.cpp
src/modules/model/: Line.cpp  Person.cpp
src/modules/util/: intersect.cpp
src/modules/view/: WindowController.cpp
src/util/: intersect.cpp
src/view/: ImageGridCell.cpp  ImageGridWindow.cpp
